--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,328 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+/* Base styles for blockquotes */
+@layer base {
+  blockquote {
+    @apply border-l-4 border-gray-200 pl-4 italic;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* Spinner animation keyframes */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
+/* add the code bellow */ 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
   }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+}
+}
+/* Spinner styling */
+.spinner {
+  @apply inline-block w-16 h-16 border-4 border-solid border-current border-r-transparent rounded-full animate-spin;
+  animation: spin 1s linear infinite;
+}
+
+/* Font class definitions */
+.playfair-display-font {
+  font-family: "Playfair Display", serif; /* Use Google font family for Playfair Display */
+  letter-spacing: 0.01em;
+}
+
+.dm-sans-font {
+  font-family: "DM Sans", sans-serif; /* Use Google font family for DM Sans */
+}
+
+
+
+/* Blinking animation */
+@keyframes blink {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+.animate-blink {
+  animation: blink 1s infinite;
+}
+
+.ant-picker-panel {
+  &:last-child {
+    width: 0;
+    .ant-picker-header {
+      position: absolute;
+      right: 0;
+      .ant-picker-header-prev-btn, .ant-picker-header-view {
+        visibility: hidden;
+      }
+    }
+
+    .ant-picker-body {
+      display: none;
+    }
+
+    @media (min-width: 768px) {
+      width: 280px!important;
+      .ant-picker-header {
+        position: relative;
+        .ant-picker-header-prev-btn, .ant-picker-header-view {
+          visibility: initial;
+        }
+      }
+
+      .ant-picker-body {
+        display: block;
+      }
+    }
+  }
+}
+
+/* Main content container */
+.post-content {
+  font-family: "DM Sans", sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+
+
+.break-word-mobile {
+  white-space: nowrap;
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
+
+@media (max-width: 640px) {
+  .break-word-mobile {
+    white-space: normal; /* Allows breaking on mobile screens */
+  }
+}
+
+
+
+@media screen and (max-width:500px) {
+  .post-content {
+  font-size: 18px;
+    line-height: 32px;
+  }
+}
+
+/* Headings */
+.post-content h1, .post-content h2, .post-content h3, 
+.post-content h4, .post-content h5, .post-content h6 {
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.gh-content > * + * {
+  margin-bottom: 0;
+  margin-top: calc(16px * var(--content-spacing-multiplier, 1));
+}
+
+.post-content h1 {
+  font-size: 67px;
+  line-height: 78px;
+  font-family: "Playfair Display", serif;
+  color: #945c39;
+  font-style: italic;
+}
+.post-content h2 {
+  font-size: 42px;
+  line-height: 46px;
+  font-family: "Playfair Display", serif;
+  color: #945c39;
+font-weight: 500;
+}
+
+.post-content h3 {
+  font-size: 26px;
+  line-height: 35px;
+  font-family: "DM Sans", sans-serif;
+font-weight: 500;
+}
+
+.post-content h4 {
+  font-size: 16px;
+  line-height: 21px;
+  font-family: "Playfair Display", serif;
+  color: #945c39;
+  font-style: italic;
+font-weight: 400;
+}
+/* Paragraphs */
+/* .post-content p {
+  font-size: 16px;
+  line-height: 21px;
+} */
+
+/* Links */
+.post-content a {
+  color: #d1a47b;
+  text-decoration: none;
+}
+
+.post-content a:hover {
+  text-decoration: underline;
+}
+
+
+
+/* Lists */
+.post-content ul, .post-content ol {
+  margin-bottom: 1em;
+  padding-left: 2em;
+}
+
+.post-content li {
+  list-style: disc;
+  margin-bottom: 0.5em;
+}
+
+/* Blockquotes */
+.post-content blockquote {
+  margin: 1em 0;
+  padding: 0.5em 1em;
+  border-left: 4px solid #ddd;
+  background-color: #f9f9f9;
+  font-style: italic;
+}
+
+/* Code blocks */
+.post-content pre {
+  background-color: #f4f4f4;
+  padding: 1em;
+  border-radius: 4px;
+  overflow-x: auto;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.post-content code {
+  background-color: #f4f4f4;
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+/* Images */
+.post-content img {
+  max-width: 100%;
+  height: auto;
+  margin: 1em 0;
+}
+
+/* Figures and captions */
+.post-content figure {
+  margin: 1em 0;
+}
+
+.post-content figcaption {
+  font-size: 0.9em;
+  color: #666;
+  text-align: center;
+  margin-top: 0.5em;
+}
+
+/* Tables */
+.post-content .simple-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1em;
+  overflow-x: auto;
+  display: block; /* Ensures the table behaves properly with overflow */
+}
+
+.post-content table{
+  width: 100%;
+}
+
+/* Table cells */
+.post-content  th, .post-content  td {
+    border: 1px solid #945c39;
+    padding: 0.5em;
+    width: auto !important;
+  text-align: start;
+}
+
+/* Scrolling for small screens */
+@media screen and (max-width: 768px) {
+  .post-content table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap; /* Prevents table content from wrapping */
+  }
+}
+
+.post-content th {
+  background-color: #fee9d6;
+  font-weight: bold;
+}
+
+/* Horizontal rule */
+.post-content hr {
+  border: none;
+  border-top: 1px solid #ddd;
+  margin: 2em 0;
+}
+
+/* Emphasis */
+.post-content em {
+  font-style: italic;
+}
+
+.post-content strong {
+  font-weight: bold;
+}
+
+/* Definition lists */
+.post-content dl {
+  margin-bottom: 1em;
+}
+
+.post-content dt {
+  font-weight: bold;
+}
+
+.post-content dd {
+  margin-left: 2em;
+  margin-bottom: 0.5em;
+}
+
+/* Adjustments for smaller screens */
+@media (max-width: 768px) {
+  
+
+  .post-content h1 { font-size: 35px;line-height: 46px;font-family: "Playfair Display", serif;color: #945c39; }
+  .post-content h2 { font-size: 27px;line-height: 40px;font-family: "Playfair Display", serif;color: #945c39; }
+  .post-content h3 { font-size: 21px;line-height: 46px;font-family: "Playfair Display", serif;color: #945c39; }
+  .post-content h4 { font-size: 16px;line-height: 21px;font-family: "Playfair Display", serif;color: #945c39; }
+
+
+
+}
+
+.kg-card,.kg-file-card,.kg-file-card-container{
+  border: 1px solid burlywood;
+  padding: 10px;
+}
+
+.kg-file-card-icon{
+  width: 20px;
 }
